# BuymeProject

./: buyme_test.py  config.json  pyproject.toml
Extras/: extra.py
allure-report/: 0567dfaf-89af-4974-9c6d-d864ee27dbec-result.json  082f5f9c-f456-4503-adf0-49fab96d607e-result.json  0d8d7b21-1324-4e5e-8dcb-b3d3f04d4751-container.json  10e81db0-1c0b-42c0-9ebe-591e4c3063de-result.json  28e0da56-a536-4556-a421-674a31527a1d-result.json  3bc3c6fd-7591-4c10-83e1-9412c128cebb-container.json  449680b8-699f-4b1c-ba29-7062baa64b11-result.json  7393eae2-678f-4a5b-ba74-6b550c0d27e7-container.json  7c0b40fa-08c2-41e8-abdc-b7287151d135-result.json  7cb03e79-ba33-496a-8f62-064d80aaaff2-result.json  8583326f-29b8-416a-ac1a-9dd281e99ee4-result.json  8dc52e16-4093-4113-9376-360ee22ab1da-result.json  c66255f7-3bc5-4f25-9a29-78b4ee7dec42-result.json  d099b9b0-5c5d-4b2c-a33c-94b6f5f3953d-result.json  e14ab335-f010-4537-a9b2-5ebcb4472029-result.json  f296344a-2be0-4047-924f-4a91d7696afd-result.json  fe06b18f-1405-47a9-ba5c-f628ebe131be-result.json  index.html
allure-report/export/: influxDbData.txt
base/: base_page.py
buyme_pages/: home_page.py  intro_and_registration_page.py  pick_business_page.py  sender_and_receiver_information_page.py
