[tool.poetry]
name = "buymeproject"
version = "0.1.0"
description = ""
authors = ["TamarFeredee <tamar8689@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.11.2"
allure-pytest = "^2.13.2"
step = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
